--- a/Tag2 29-09-2022.md
+++ b/Tag2 29-09-2022.md
@@ -1,1 +1,69 @@
+## A2: Alphanumerische Codes ASCII und Unicode
 
+ASCII
+
+Der ASCII-Code auch American Standard Code for Information Interchange genant, ist eine 7-Bit-Zeichenkodierung. Im Bild unten Sehen Sie die komplette Tabelle: 
+
+ <img src=".../../../../Bildergalerie/ASCII.png" height="150" width="200"><br>
+
+UTF-8 / UTF-16
+
+Der Unterschied ist, sie verwenden unterschiedliche viele Bytes zum Codieren. 
+- UTF-8 1-Byte (8Bit) | UTF-16 2-Byte (16 Bit)
+
+Webseite mit einer Tabelle von UTF
+
+https://www.utf8-zeichentabelle.de/unicode-utf8-table.pl?names=-&unicodeinhtml=hex
+
+
+# Aufgaben
+
+
+## Aufgabe 1: 
+
+- Textsample 1 = ASCII
+- Textsample 2 = UTF-8
+- Textsample 3 = UTF-16
+
+
+## Aufgabe 2: 
+
+- Textsample 1 = 66 
+- Textsample 2 = 68
+- Textsample 3 = 69
+
+
+## Aufgabe 3: 
+
+- Textsample 1 = 8.25  Byte
+- Textsample 2 = 8.5   Byte
+- Textsample 3 = 8.625 Byte
+
+Unterschied zwischen Dateigrössen und Dateigrössen auf dem Datenpseicher:
+Diese Angaben "Grösse" und "Grösse von Datenträgern" werden in Clustern angezeigt.
+
+Ein Cluster hat meistens eine Grösse von 4096 Bytes.
+Falls nun eine Datei etwas grösser ist, wird das Cluster um eins erweitert und beträgt nun 8192 Bytes 
+
+Bei dem Dateisystem NTFS gibt es noch zwei Eigenheiten.
+Wenn eine Datei max. 700 Bytes Speicher benötigt, wird diese im Verzeichniseintrag gesichert.  Deshalb fällt die Speicherangabe von komprimierte Ordnern geringer aus auf der Option "Größe auf Datenträger" als bei "Grösse" 
+
+
+## Aufgabe 4: 
+
+Wird auf der VM gemacht, führe auf dem PC keine komischen Befehle aus. 
+
+
+## Aufgabe 5: 
+
+Was fällt auf:
+
+- Die Zeichen ä, ö, à etc. werden wie erwartet nicht im ASCII angezeigt, da es die nicht gibt.
+- In UTF-8 werde die ä, ö, à etc. angezeigt 
+
+## Aufgabe 6: 
+-
+
+
+
+[Zurück](README.md)
